--- a/4.Dependency-Injection.md
+++ b/4.Dependency-Injection.md
@@ -1,1 +1,13 @@
+# Dependency Injection
 
+1. create a new component
+2. add a number input
+    use (change) to get the value into the component class
+3. generate a new service
+4. give the component a property to hold the current number
+5. inject the service into this new component
+6. when number input changes, also update the current number in the service
+7. also inject the service into the component with the totals
+8. show the current number in the totals component
+
+![Screenshot 2023-05-11 at 07 58 21](https://github.com/reconcept-developers/intro-into-angular-assignments/assets/8514342/c954a74e-f2cb-41de-b887-53de16892ed9)
