--- a/3.Component-Template.md
+++ b/3.Component-Template.md
@@ -16,8 +16,7 @@
 2. add component property containing a number
 3. show component property value in template
 4. component property with this list: [0, 1, 2, 3, 4, 5]
-5. allow the user to select a value from this list with a <select>
-    use [value] & (change)
+5. allow the user to select a value from this list with a <select>. use [value] & (change)
     
 ![Screenshot 2023-05-11 at 07 55 52](https://github.com/reconcept-developers/intro-into-angular-assignments/assets/8514342/800dc297-0c3e-4dd8-9a5d-74ca663632f4)
 
